[tests] remove FastCGI test dependency on libfcgi
- rewrite fcgi-responder as standalone app
  fcgi-responder is now a minimal, standalone FastCGI server for tests
- remove dependency on fcgi-devel package
- merge fcgi-auth into fcgi-responder

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,16 +1,9 @@
 # lighttpd.conf and conformance.pl expect this directory
 testdir=$(srcdir)/tmp/lighttpd/
 
-if CHECK_WITH_FASTCGI
-check_PROGRAMS=fcgi-auth fcgi-responder scgi-responder
-
-fcgi_auth_SOURCES=fcgi-auth.c
-fcgi_auth_LDADD=-lfcgi
+check_PROGRAMS=fcgi-responder scgi-responder
 
 fcgi_responder_SOURCES=fcgi-responder.c
-fcgi_responder_LDADD=-lfcgi
-endif
-
 scgi_responder_SOURCES=scgi-responder.c
 
 TESTS=\
