--- a/tests/fastcgi-responder.conf
+++ b/tests/fastcgi-responder.conf
@@ -34,7 +34,7 @@ fastcgi.server = (
 		"grisu-auth" => (
 			"host" => "127.0.0.1",
 			"port" => 20000,
-			"bin-path" => env.SRCDIR + "/fcgi-auth",
+			"bin-path" => env.SRCDIR + "/fcgi-responder",
 			"mode" => "authorizer",
 			"check-local" => "disable",
 		),
