[tests] remove FastCGI test dependency on PHP

--- a/tests/fastcgi-responder.conf
+++ b/tests/fastcgi-responder.conf
@@ -15,69 +15,95 @@ server.name                = "www.example.org"
 server.tag                 = "Apache 1.3.29"
 
 server.modules = (
+	"mod_auth",
+	"mod_authn_file",
 	"mod_fastcgi",
 	"mod_accesslog",
-)
-
-index-file.names = (
-	"index.php",
-	"index.html",
 )
 
 accesslog.filename = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.access.log"
 
 $HTTP["host"] == "auth.example.org" {
 
-fastcgi.debug = 0
-fastcgi.server = (
+    server.name = "auth.example.org"
+
+    $HTTP["url"] =~ "\.php$" {
+	auth.backend.htpasswd.userfile = env.SRCDIR + "/tmp/lighttpd/lighttpd.htpasswd"
+	auth.backend = "htpasswd"
+	auth.require = (
+		"" => (
+			"method"  => "basic",
+			"realm"   => "download archiv",
+			"require" => "valid-user",
+		),
+	)
+    }
+
+    fastcgi.debug = 0
+    fastcgi.server = (
 	"/" => (
 		"grisu-auth" => (
 			"host" => "127.0.0.1",
-			"port" => 20000,
+			"port" => 10000,
 			"bin-path" => env.SRCDIR + "/fcgi-responder",
-			"mode" => "authorizer",
+			"bin-copy-environment" => ( "PATH", "SHELL", "USER", ),
 			"check-local" => "disable",
+			"max-procs" => 1,
+			"mode" => "authorizer",
 		),
 		"grisu-resp" => (
 			"host" => "127.0.0.1",
 			"port" => 10000,
 			"bin-path" => env.SRCDIR + "/fcgi-responder",
+			"bin-copy-environment" => ( "PATH", "SHELL", "USER", ),
 			"check-local" => "disable",
 			"max-procs" => 1,
 		),
 	),
-)
+    )
 
 }
 else {
 
-fastcgi.debug = 0
-fastcgi.server = (
+    fastcgi.debug = 0
+    fastcgi.server = (
+	".php" => ( (
+		"host" => "127.0.0.1",
+		"port" => 10000,
+		"bin-path" => env.SRCDIR + "/fcgi-responder",
+		"bin-copy-environment" => ( "PATH", "SHELL", "USER", ),
+		"check-local" => "disable",
+		"max-procs" => 1,
+	) ),
+	"/prefix.fcgi" => ( (
+		"host" => "127.0.0.1",
+		"port" => 10000,
+		"bin-path" => env.SRCDIR + "/fcgi-responder",
+		"max-procs" => 1,
+	) ),
 	".fcgi" => (
 		"grisu" => (
 			"host" => "127.0.0.1",
 			"port" => 10000,
 			"bin-path" => env.SRCDIR + "/fcgi-responder",
+			"bin-copy-environment" => ( "PATH", "SHELL", "USER", ),
 			"check-local" => "disable",
 			"max-procs" => 1,
-			"min-procs" => 1,
 		),
 	),
-)
+    )
 
-}
-
-$HTTP["host"] == "zzz.example.org" {
-	server.name = "zzz.example.org"
 }
 
 $HTTP["host"] == "wsgi.example.org" {
 	fastcgi.server = (
 		"/" => ( (
-			"host" => "127.0.0.1", "port" => 10000,
-			"fix-root-scriptname" => "enable",
-			"check-local" => "disable",
+			"host" => "127.0.0.1",
+			"port" => 10000,
 			"bin-path" => env.SRCDIR + "/fcgi-responder",
+			"bin-copy-environment" => ( "PATH", "SHELL", "USER", ),
+			"check-local" => "disable",
+			"fix-root-scriptname" => "enable",
 			"max-procs" => 1,
 		) ),
 	)
