--- a/tests/lighttpd.conf
+++ b/tests/lighttpd.conf
@@ -172,3 +172,9 @@ $HTTP["host"] == "etag.example.org" {
 	static-file.etags = "disable"
 	deflate.filetype = ()
 }
+
+$HTTP["host"] == "cgi.example.org" {
+	index-file.names = ( "nonexistent.txt", "index.pl" )
+        server.error-handler-404 = "/indexfile/index.pl"
+	cgi.x-sendfile = "enable"
+}
