[core] inet_ntop_cache -> sock_addr_cache
* rename inet_ntop_cache.[ch] to sock_addr_cache.[ch]
* reimplement as separate caches for IPv4 and IPv6

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -777,7 +777,7 @@ add_executable(lighttpd
 	connections.c
 	h2.c
 	reqpool.c
-	inet_ntop_cache.c
+	sock_addr_cache.c
 	ls-hpack/lshpack.c
 	algo_xxhash.c
 	network.c
