--- a/src/SConscript
+++ b/src/SConscript
@@ -79,7 +79,7 @@ common_src = Split("base64.c buffer.c burl.c log.c \
 ")
 
 src = Split("server.c response.c connections.c h2.c reqpool.c \
-	inet_ntop_cache.c \
+	sock_addr_cache.c \
 	ls-hpack/lshpack.c \
 	algo_xxhash.c \
 	network.c \
