--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -746,7 +746,7 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 set(COMMON_SRC
 	base64.c buffer.c burl.c log.c
 	http_header.c http_kv.c keyvalue.c chunk.c
-	http_chunk.c stream.c fdevent.c gw_backend.c
+	http_chunk.c fdevent.c gw_backend.c
 	stat_cache.c plugin.c http_etag.c array.c
 	data_string.c data_array.c
 	data_integer.c
