--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -71,7 +71,7 @@ CLEANFILES = versionstamp.h versionstamp.h.tmp lemon$(BUILD_EXEEXT)
 
 common_src=base64.c buffer.c burl.c log.c \
 	http_header.c http_kv.c keyvalue.c chunk.c  \
-	http_chunk.c stream.c fdevent.c gw_backend.c \
+	http_chunk.c fdevent.c gw_backend.c \
 	stat_cache.c plugin.c http_etag.c array.c \
 	data_string.c data_array.c \
 	data_integer.c \
@@ -468,7 +468,6 @@ hdr = base64.h buffer.h burl.h network.h log.h http_kv.h keyvalue.h \
 	algo_md.h algo_md5.h algo_sha1.h algo_splaytree.h algo_xxhash.h \
 	http_auth.h http_cgi.h http_date.h \
 	http_header.h http_range.h http_vhostdb.h \
-	stream.h \
 	fdevent.h gw_backend.h connections.h base.h base_decls.h stat_cache.h \
 	plugin.h plugin_config.h \
 	http_etag.h array.h vector.h \
