--- a/src/SConscript
+++ b/src/SConscript
@@ -57,7 +57,7 @@ def GatherLibs(env, *libs):
 
 common_src = Split("base64.c buffer.c burl.c log.c \
 	http_header.c http_kv.c keyvalue.c chunk.c  \
-	http_chunk.c stream.c fdevent.c gw_backend.c \
+	http_chunk.c fdevent.c gw_backend.c \
 	stat_cache.c plugin.c http_etag.c array.c \
 	data_string.c data_array.c \
 	data_integer.c \
