[tests] load required modules in alt .conf tests
load only required modules in alt .conf tests

--- a/tests/mod-auth.conf
+++ b/tests/mod-auth.conf
@@ -14,11 +14,13 @@ server.breakagelog         = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.breakage.
 server.name                = "www.example.org"
 server.tag                 = "Apache 1.3.29"
 
+server.compat-module-load = "disable"
 server.modules = (
 	"mod_auth",
 	"mod_authn_file",
 	"mod_status",
 	"mod_accesslog",
+	"mod_staticfile",
 )
 
 accesslog.filename = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.access.log"
