--- a/tests/mod-deflate.conf
+++ b/tests/mod-deflate.conf
@@ -14,8 +14,10 @@ server.errorlog            = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.error.log
 server.breakagelog         = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.breakage.log"
 server.name                = "www.example.org"
 
+server.compat-module-load = "disable"
 server.modules = (
 	"mod_deflate",
+	"mod_staticfile",
 )
 
 mimetype.assign = (
