--- a/tests/proxy.conf
+++ b/tests/proxy.conf
@@ -10,6 +10,7 @@ server.breakagelog         = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.breakage.
 server.name                = "www.example.org"
 server.tag                 = "Proxy"
 
+server.compat-module-load = "disable"
 server.modules = (
 	"mod_rewrite",
 	"mod_proxy",
