--- a/tests/404-handler.conf
+++ b/tests/404-handler.conf
@@ -15,9 +15,11 @@ server.name                = "www.example.org"
 server.tag                 = "Apache 1.3.29"
 
 
+server.compat-module-load = "disable"
 server.modules = (
 	"mod_cgi",
 	"mod_accesslog",
+	"mod_staticfile",
 )
 
 accesslog.filename          = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.access.log"
