--- a/tests/lowercase.conf
+++ b/tests/lowercase.conf
@@ -10,10 +10,12 @@ server.breakagelog         = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.breakage.
 
 server.force-lowercase-filenames = "enable"
 
+server.compat-module-load = "disable"
 server.modules = (
 	"mod_access",
 	"mod_auth",
 	"mod_authn_file",
+	"mod_staticfile",
 )
 
 mimetype.assign = (
