--- a/tests/mod-extforward.conf
+++ b/tests/mod-extforward.conf
@@ -14,6 +14,7 @@ server.breakagelog         = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.breakage.
 server.name                = "www.example.org"
 server.tag                 = "Apache 1.3.29"
 
+server.compat-module-load = "disable"
 server.modules = (
 	"mod_cgi",
 	"mod_extforward",
