--- a/tests/mod-secdownload.conf
+++ b/tests/mod-secdownload.conf
@@ -14,9 +14,11 @@ server.breakagelog         = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.breakage.
 server.name                = "www.example.org"
 server.tag                 = "Apache 1.3.29"
 
+server.compat-module-load = "disable"
 server.modules = (
 	"mod_secdownload",
 	"mod_accesslog",
+	"mod_staticfile",
 )
 
 accesslog.filename = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.access.log"
