[multiple] etag.[ch] -> http_etag.[ch]; better imp
more efficient implementation of HTTP ETag generation and comparison

modify dekhash() to take hash value to allow for incremental hashing

--- a/src/meson.build
+++ b/src/meson.build
@@ -702,7 +702,7 @@ common_src = [
 	'data_array.c',
 	'data_integer.c',
 	'data_string.c',
-	'etag.c',
+	'http_etag.c',
 	'fdevent_freebsd_kqueue.c',
 	'fdevent_libev.c',
 	'fdevent_linux_sysepoll.c',
