--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -734,7 +734,7 @@ set(COMMON_SRC
 	base64.c buffer.c burl.c log.c
 	http_header.c http_kv.c keyvalue.c chunk.c
 	http_chunk.c stream.c fdevent.c gw_backend.c
-	stat_cache.c plugin.c etag.c array.c
+	stat_cache.c plugin.c http_etag.c array.c
 	data_string.c data_array.c
 	data_integer.c
 	algo_md5.c algo_sha1.c algo_splaytree.c
