[build] add GNUMAKEFLAGS=--no-print-directory
quiet some automake noise during build
(can use 'make -s' to quiet more)

In doc/ and tests/docroot/, add GNUMAKEFLAGS=--no-print-directory -s

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,3 +7,5 @@ ACLOCAL_AMFLAGS = -I m4 -I scripts/m4
 distcleancheck_listfiles = find -type f -exec sh -c 'test -f $(srcdir)/{} || echo {}' ';'
 
 AM_DISTCHECK_CONFIGURE_FLAGS=--with-openssl
+
+GNUMAKEFLAGS=--no-print-directory
