--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,5 +1,6 @@
 SUBDIRS=config scripts systemd outdated
 dist_man8_MANS=lighttpd.8 lighttpd-angel.8
+GNUMAKEFLAGS=--no-print-directory -s
 
 EXTRA_DIST= \
 	initscripts.txt \
