[tests] consolidate some tests/ content

--- a/tests/proxy.conf
+++ b/tests/proxy.conf
@@ -28,5 +28,5 @@ proxy.server = ( "" => (
 ))
 
 url.rewrite = (
-	"^/rewrite/all(/.*)$" => "/indexfile/query_string.pl?$1",
+	"^/rewrite/all(/.*)$" => "/cgi.pl?$1",
 )
