[tests] use ephemeral ports in tests
avoid spurious test failures due to conflicts with ports in use by
other processes, which might occur when tests use hard-coded ports

--- a/tests/fastcgi-responder.conf
+++ b/tests/fastcgi-responder.conf
@@ -1,14 +1,9 @@
-server.document-root         = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
-
 debug.log-request-header   = "enable"
 debug.log-response-header  = "enable"
 debug.log-request-handling = "enable"
 
-## bind to port (default: 80)
-server.port                 = 2048
-
-## bind to localhost (default: all interfaces)
-server.bind                = "localhost"
+server.systemd-socket-activation = "enable"
+server.document-root       = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
 server.errorlog            = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.error.log"
 server.breakagelog         = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.breakage.log"
 server.name                = "www.example.org"
@@ -45,7 +40,7 @@ $HTTP["host"] == "auth.example.org" {
 	"/" => (
 		"grisu-auth" => (
 			"host" => "127.0.0.1",
-			"port" => 10000,
+			"port" => env.EPHEMERAL_PORT,
 			"bin-path" => env.SRCDIR + "/fcgi-responder",
 			"bin-copy-environment" => ( "PATH", "SHELL", "USER", ),
 			"check-local" => "disable",
@@ -54,7 +49,7 @@ $HTTP["host"] == "auth.example.org" {
 		),
 		"grisu-resp" => (
 			"host" => "127.0.0.1",
-			"port" => 10000,
+			"port" => env.EPHEMERAL_PORT,
 			"bin-path" => env.SRCDIR + "/fcgi-responder",
 			"bin-copy-environment" => ( "PATH", "SHELL", "USER", ),
 			"check-local" => "disable",
@@ -70,7 +65,7 @@ else {
     fastcgi.server = (
 	".php" => ( (
 		"host" => "127.0.0.1",
-		"port" => 10000,
+		"port" => env.EPHEMERAL_PORT,
 		"bin-path" => env.SRCDIR + "/fcgi-responder",
 		"bin-copy-environment" => ( "PATH", "SHELL", "USER", ),
 		"check-local" => "disable",
@@ -78,14 +73,14 @@ else {
 	) ),
 	"/prefix.fcgi" => ( (
 		"host" => "127.0.0.1",
-		"port" => 10000,
+		"port" => env.EPHEMERAL_PORT,
 		"bin-path" => env.SRCDIR + "/fcgi-responder",
 		"max-procs" => 1,
 	) ),
 	".fcgi" => (
 		"grisu" => (
 			"host" => "127.0.0.1",
-			"port" => 10000,
+			"port" => env.EPHEMERAL_PORT,
 			"bin-path" => env.SRCDIR + "/fcgi-responder",
 			"bin-copy-environment" => ( "PATH", "SHELL", "USER", ),
 			"check-local" => "disable",
@@ -100,7 +95,7 @@ $HTTP["host"] == "wsgi.example.org" {
 	fastcgi.server = (
 		"/" => ( (
 			"host" => "127.0.0.1",
-			"port" => 10000,
+			"port" => env.EPHEMERAL_PORT,
 			"bin-path" => env.SRCDIR + "/fcgi-responder",
 			"bin-copy-environment" => ( "PATH", "SHELL", "USER", ),
 			"check-local" => "disable",
