--- a/tests/proxy.conf
+++ b/tests/proxy.conf
@@ -1,10 +1,5 @@
+server.systemd-socket-activation = "enable"
 server.document-root         = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
-
-## bind to port (default: 80)
-server.port                 = 2050
-
-## bind to localhost (default: all interfaces)
-server.bind                = "localhost"
 server.errorlog            = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.error.log"
 server.breakagelog         = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.breakage.log"
 server.name                = "www.example.org"
@@ -23,7 +18,7 @@ proxy.debug = 1
 proxy.server = ( "" => (
 	"grisu" => (
 		"host" => "127.0.0.1",
-		"port" => 2048,
+		"port" => env.EPHEMERAL_PORT,
 	),
 ))
 
