--- a/tests/scgi-responder.conf
+++ b/tests/scgi-responder.conf
@@ -1,14 +1,9 @@
-server.document-root         = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
-
 #debug.log-request-header   = "enable"
 #debug.log-response-header  = "enable"
 #debug.log-request-handling = "enable"
 
-## bind to port (default: 80)
-server.port                 = 2048
-
-## bind to localhost (default: all interfaces)
-server.bind                = "localhost"
+server.systemd-socket-activation = "enable"
+server.document-root       = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
 server.errorlog            = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.error.log"
 server.breakagelog         = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.breakage.log"
 server.name                = "www.example.org"
@@ -27,7 +22,7 @@ scgi.server = (
 	".scgi" => (
 		"grisu" => (
 			"host" => "127.0.0.1",
-			"port" => 10000,
+			"port" => env.EPHEMERAL_PORT,
 			"bin-path" => env.SRCDIR + "/scgi-responder",
 			"check-local" => "disable",
 			"max-procs" => 1,
@@ -39,7 +34,8 @@ scgi.server = (
 $HTTP["host"] == "wsgi.example.org" {
 	scgi.server = (
 		"/" => ( (
-			"host" => "127.0.0.1", "port" => 10000,
+			"host" => "127.0.0.1",
+			"port" => env.EPHEMERAL_PORT,
 			"fix-root-scriptname" => "enable",
 			"check-local" => "disable",
 			"bin-path" => env.SRCDIR + "/scgi-responder",
