--- a/tests/condition.conf
+++ b/tests/condition.conf
@@ -1,19 +1,12 @@
-
 debug.log-request-handling = "enable"
 debug.log-condition-handling = "enable"
 
+server.systemd-socket-activation = "enable"
 server.document-root         = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
-
-## bind to port (default: 80)
-server.port                 = 2048
-
-## bind to localhost (default: all interfaces)
-server.bind                = "localhost"
 server.errorlog            = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.error.log"
 server.breakagelog         = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.breakage.log"
 server.name                = "www.example.org"
 server.tag                 = "Apache 1.3.29"
-
 
 server.compat-module-load = "disable"
 server.modules = (
