--- a/tests/lighttpd.conf
+++ b/tests/lighttpd.conf
@@ -2,16 +2,12 @@ debug.log-request-handling = "enable"
 debug.log-request-header = "enable"
 debug.log-response-header = "enable"
 #debug.log-condition-handling = "enable"
-server.document-root         = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
 
 ## 64 Mbyte ... nice limit
 server.max-request-size = 65000
 
-## bind to port (default: 80)
-server.port                 = 2048
-
-## bind to localhost (default: all interfaces)
-server.bind                = "localhost"
+server.systemd-socket-activation = "enable"
+server.document-root       = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
 server.errorlog            = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.error.log"
 server.breakagelog         = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.breakage.log"
 server.name                = "www.example.org"
