--- a/tests/lowercase.conf
+++ b/tests/lowercase.conf
@@ -1,10 +1,5 @@
+server.systemd-socket-activation = "enable"
 server.document-root         = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
-
-## bind to port (default: 80)
-server.port                 = 2048
-
-## bind to localhost (default: all interfaces)
-server.bind                = "localhost"
 server.errorlog            = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.error.log"
 server.breakagelog         = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.breakage.log"
 
