--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,6 +32,7 @@ option(WITH_WEBDAV_LOCKS "locks in webdav [default: off]")
 option(WITH_BROTLI "with brotli-support for mod_deflate [default: off]")
 option(WITH_BZIP "with bzip2-support for mod_deflate [default: off]")
 option(WITH_ZLIB "with deflate-support for mod_deflate [default: on]" ON)
+option(WITH_ZSTD "with zstd-support for mod_deflate [default: off]")
 option(WITH_KRB5 "with Kerberos5-support for mod_auth [default: off]")
 option(WITH_LDAP "with LDAP-support for mod_auth mod_vhostdb_ldap [default: off]")
 option(WITH_PAM "with PAM-support for mod_auth [default: off]")
@@ -607,6 +608,14 @@ else()
 	unset(ZLIB_LIBRARY)
 endif()
 
+if(WITH_ZSTD)
+	check_include_files(zstd.h HAVE_ZSTD_H)
+	check_library_exists(zstd ZSTD_versionNumber "" HAVE_ZSTD)
+else()
+	unset(HAVE_ZSTD_H)
+	unset(HAVE_ZSTD)
+endif()
+
 if(WITH_BZIP)
 	check_include_files(bzlib.h HAVE_BZLIB_H)
 	check_library_exists(bz2 BZ2_bzCompress "" HAVE_LIBBZ2)
@@ -1063,9 +1072,12 @@ if(WITH_SASL)
 	target_link_libraries(mod_authn_sasl ${L_MOD_AUTHN_SASL})
 endif()
 
-if(HAVE_ZLIB_H OR HAVE_BZLIB_H OR HAVE_BROTLI)
+if(HAVE_ZLIB_H OR HAVE_ZSTD_H OR HAVE_BZLIB_H OR HAVE_BROTLI)
 	if(HAVE_ZLIB_H)
 		set(L_MOD_DEFLATE ${L_MOD_DEFLATE} ${ZLIB_LIBRARY})
+	endif()
+	if(HAVE_ZSTD_H)
+		set(L_MOD_DEFLATE ${L_MOD_DEFLATE} zstd)
 	endif()
 	if(HAVE_BZLIB_H)
 		set(L_MOD_DEFLATE ${L_MOD_DEFLATE} bz2)
