--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -384,10 +384,10 @@ endif()
 if(WITH_MBEDTLS)
 	check_include_files(mbedtls/ssl.h HAVE_MBEDTLS_SSL_H)
 	if(HAVE_MBEDTLS_SSL_H)
-		check_library_exists(mbedcrypto mbedtls_base64_encode "" HAVE_LIBMBEDCRYPTO)
-		if(HAVE_LIBMBEDCRYPTO)
+		check_library_exists(mbedcrypto mbedtls_base64_encode "" HAVE_LIBCRYPTO)
+		if(HAVE_LIBCRYPTO)
 			set(CRYPTO_LIBRARY mbedcrypto)
-			set(HAVE_LIBCRYPTO 1)
+			set(HAVE_LIBMBEDCRYPTO 1)
 			check_library_exists(mbedtls mbedtls_cipher_info_from_type "" HAVE_LIBMBEDTLS)
 			if(HAVE_LIBMBEDTLS)
 			    check_library_exists(mbedx509 mbedtls_x509_get_name "" HAVE_LIBMBEDX509)
