[build] adjust crypto vars in src/CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -386,6 +386,7 @@ if(WITH_MBEDTLS)
 	if(HAVE_MBEDTLS_SSL_H)
 		check_library_exists(mbedcrypto mbedtls_base64_encode "" HAVE_LIBMBEDCRYPTO)
 		if(HAVE_LIBMBEDCRYPTO)
+			add_definitions(-DHAVE_LIBMBEDCRYPTO)
 			set(CRYPTO_LIBRARY mbedcrypto)
 			check_library_exists(mbedtls mbedtls_cipher_info_from_type "" HAVE_LIBMBEDTLS)
 			if(HAVE_LIBMBEDTLS)
@@ -404,6 +405,7 @@ if(WITH_NSS)
 	check_include_files(nss/nss.h HAVE_NSS_NSS_H)
 	check_include_files(nss3/nss.h HAVE_NSS3_NSS_H)
 	if(HAVE_NSS3_NSS_H OR HAVE_NSS_NSS_H)
+		add_definitions(-DHAVE_NSS_NSS_H)
 		check_library_exists(ssl3 NSSSSL_GetVersion "" HAVE_LIBSSL3)
 		if(HAVE_LIBSSL3)
 		    check_library_exists(smime3 NSSSMIME_GetVersion "" HAVE_LIBSMIME3)
@@ -433,6 +435,7 @@ if(WITH_NETTLE)
 		set(CMAKE_REQUIRED_INCLUDES)
 	endif()
 	if(HAVE_NETTLE_NETTLE_TYPES_H)
+		add_definitions(-DHAVE_NETTLE_NETTLE_TYPES_H)
 		check_library_exists(nettle nettle_md5_init "" HAVE_LIBNETTLE)
 		if(HAVE_LIBNETTLE)
 			set(CRYPTO_LIBRARY nettle)
